--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
-[package]
-name = "hello"
-version = "0.1.0"
-authors = ["ubuntu"]
-edition = "2018"
+[lib]
+name = "hello_lib"
+path = "src/lib.rs"
+crate-type =["cdylib"]
 
 [dependencies]
