--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
+[package]
+name = "hello"
+version = "0.1.0"
+authors = ["ubuntu"]
+edition = "2018"
+
 [lib]
 name = "hello_lib"
 path = "src/lib.rs"
